# prometheus-service-discovery

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: prometheus-sd.conf  prometheus-sd.service
src/: main.rs
